# postgres-tools

./: .gitignore  Makefile  README.md  compose.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: docker-build-push.yml  publish-image.yml  test.yml
alembic/: alembic.ini  env.py
docker/: base.Dockerfile  db-tools-entrypoint.sh  dumper.Dockerfile  migrator.Dockerfile
script/: dump.py
test/: README.md  compose.yml  run_tests.sh
test/alembic/versions/: test_migration.py
